--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 </head>
 <body>
   <div id="root" style="width:100%;height:100%;"></div>
-  <script type='text/javascript' src='build/app.bundle.js'></script>
+  <script type='text/javascript' src='http://localhost:8080/build/app.bundle.js'></script>
 </body>
 </html>
